--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "betterattendance-backend",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon --config nodemon.json src/app.ts",
+    "start": "node -r ts-node/register src/app.ts"
   },
   "author": "Andrew Jujun, Khoi Tran",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "config": "^3.3.11",
     "express": "^4.18.2",
-    "mongoose": "^7.5.3",
-    "short-uuid": "^4.2.2",
-    "socket.io": "^4.7.2"
+    "nanoid": "^3.3.4",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.1"
+    "@types/config": "^3.3.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
