--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --config nodemon.json src/app.ts",
-    "start": "node -r ts-node/register src/app.ts"
+    "start": "node -r ts-node/register src/app.ts",
+    "clean": "rm -rf node_modules/"
   },
   "author": "Andrew Jujun, Khoi Tran",
   "license": "ISC",
