--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.11",
+    "csv": "^6.3.8",
     "express": "^4.18.2",
     "nanoid": "^3.3.4",
     "socket.io": "^4.7.4"
